test/error/test-04.ifj21
-- 3 (not defined variable)
require "ifj21"

function main()
    a = 12
end
